# rustsynth

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
book/: book.toml
book/src/: SUMMARY.md  features.md  introduction.md
example/: Cargo.toml
example/src/: lib.rs
rspipe/: Cargo.toml  README.md
rspipe/src/: main.rs  output.rs  progress.rs
rustsynth/: Cargo.toml  README.md  THIRDPARTY
rustsynth-derive/: Cargo.toml  README.md
rustsynth-derive/src/: lib.rs
rustsynth-sys/: Cargo.toml  README.md  build.rs  wrapper.h
rustsynth-sys/src/: lib.rs
rustsynth/src/: api.rs  core.rs  filter.rs  format.rs  frame.rs  function.rs  lib.rs  log.rs  map.rs  node.rs  plugin.rs
rustsynth/src/core/: tests.rs
rustsynth/src/filter/: mod.rs  traits.rs
rustsynth/src/format/: audio.rs  enums.rs  errors.rs  mod.rs  presets.rs  tests.rs  video.rs
rustsynth/src/frame/: enums.rs  frame.rs  mod.rs
rustsynth/src/map/: data.rs  errors.rs  iterators.rs  keys.rs  mod.rs  tests.rs  value.rs
rustsynth/src/node/: errors.rs  mod.rs
rustsynth/src/vsscript/: environment.rs  errors.rs  mod.rs  tests.rs
src/: api.rs  core.rs  lib.rs  plugin.rs
