[package]
name = "rustsynth"
version = "0.2.0"
edition = "2021"
license = "LGPL-2.1"
description = "Safe VapourSynth wrapper"
authors = ["Anima <contact@animafps.xyz>"]
repository = "https://github.com/animafps/rustsynth"
categories = ["multimedia::video", "api-bindings"]
keywords = ["vapoursynth"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsynth-sys = "0.1"
