[package]
name = "rustsynth-derive"
description = "Procedual macro helpers for rustsynth"
version = "0.3.0"
edition = "2021"
license = "LGPL-2.1"
authors = ["Anima <contact@animafps.xyz>"]
repository = "https://github.com/animafps/rustsynth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
