[package]
name = "rustsynth-derive"
description = "Procedual macro helpers for rustsynth"
version = "0.5.2"
edition = "2021"
license = "LGPL-2.1"
authors = ["Anima <contact@animafps.xyz>"]
repository = "https://github.com/animafps/rustsynth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
rustsynth = { version = "^0.5.0", path = "../rustsynth" }
