[package]
name = "rustsynth-sys"
description = "Low level bindings to VapourSynth"
version = "0.5.1"
edition = "2021"
license = "LGPL-2.1"
authors = ["Anima <contact@animafps.xyz>"]
repository = "https://github.com/animafps/rustsynth"

[build-dependencies]
bindgen = "0.63"

[features]

vapoursynth-functions = []
vsscript-functions = []