[package]
name = "rustsynth-sys"
description = "Low level bindings to VapourSynth"
version = "0.5.6"
edition = "2021"
license = "LGPL-2.1"
authors = ["Anima <contact@animafps.xyz>"]
repository = "https://github.com/animafps/rustsynth"

[build-dependencies]
bindgen = "0.72"

[features]
api-41 = []
vs-graph-api = []
script-api-42 = []
vapoursynth-functions = []
vsscript-functions = []

[package.metadata.docs.rs]
all-features = true