[package]
name = "rustsynth"
version = "0.4.0"
edition = "2021"
license = "LGPL-2.1"
description = "Safe VapourSynth wrapper"
authors = ["Anima <contact@animafps.xyz>"]
repository = "https://github.com/animafps/rustsynth"
categories = ["multimedia::video", "api-bindings"]
keywords = ["vapoursynth"]

[dependencies]
rustsynth-sys = {version = "0.4", path = "../rustsynth-sys"}
rustsynth-derive = {version = "0.4", path = "../rustsynth-derive"}
thiserror = "1.0"
bitflags = "1.3"
half = {version = "2.0", optional = true }

[features]
# Enable the half::f16 type to be used for frame pixel data.
f16-pixel-type = ["dep:half"]

# Features for linking to certain functions.
vapoursynth-functions = ["rustsynth-sys/vapoursynth-functions"]
vsscript-functions = ["rustsynth-sys/vsscript-functions"]

default = ["vapoursynth-functions", "vsscript-functions"]