[package]
name = "rustsynth"
version = "0.5.3"
edition = "2021"
license = "LGPL-2.1"
description = "Safe VapourSynth wrapper"
authors = ["Anima <contact@animafps.xyz>"]
repository = "https://github.com/animafps/rustsynth"
categories = ["multimedia::video", "api-bindings"]
keywords = ["vapoursynth"]

[dependencies]
rustsynth-sys = { version = "=0.5.3", path = "../rustsynth-sys" }
thiserror = "1.0"
bitflags = "1.3"
half = { version = "2.0", optional = true }
futures = "0.3"
log = "0.4"

[features]
# Enable the half::f16 type to be used for frame pixel data.
f16-pixel-type = ["dep:half"]

# Features for linking to certain functions.
vapoursynth-functions = ["rustsynth-sys/vapoursynth-functions"]
vsscript-functions = ["rustsynth-sys/vsscript-functions"]

api-41 = ["rustsynth-sys/api-41"]
script-api-42 = ["rustsynth-sys/script-api-42"]

default = ["vapoursynth-functions", "vsscript-functions", "api-41", "script-api-42"]
