[package]
name = "rustsynth"
version = "0.5.3"
description = "Safe VapourSynth wrapper"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories = ["multimedia::video", "api-bindings"]
keywords = ["vapoursynth"]

[dependencies]
rustsynth-sys = { version = ">=0.5.3, <0.6.0", path = "../rustsynth-sys" }
thiserror = "2.0"
bitflags = "2.9"
half = { version = "2.0", optional = true }
futures = "0.3"
log = "0.4"
rustsynth-derive = { version = "^0.6.0", path = "../rustsynth-derive", optional = true }

[features]
# Enable the half::f16 type to be used for frame pixel data.
f16-pixel-type = ["dep:half"]
proc-macro = ["dep:rustsynth-derive"]

# Features for linking to certain functions.
vapoursynth-functions = ["rustsynth-sys/vapoursynth-functions"]
vsscript-functions = ["rustsynth-sys/vsscript-functions"]

api-41 = ["rustsynth-sys/api-41"]
script-api-42 = ["rustsynth-sys/script-api-42"]
graph-api = ["rustsynth-sys/vs-graph-api"]

default = ["vapoursynth-functions", "vsscript-functions", "api-41", "script-api-42"]